Scrolling text; Fixed Horizontal scroll on slider

--- a/TheEvent/css/style.css
+++ b/TheEvent/css/style.css
@@ -13,6 +13,7 @@ body {
   background: #000;
   color: #2f3138;
   font-family: "Open Sans", sans-serif;
+    overflow-x: hidden;
 }
 
 a {
@@ -1947,13 +1948,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .block-list__item {
   background: #000000;
-  width: 450px;
+    width: 200%;
   height: 80vh;
   /* min-height: 600px; */
   display: inline-block;
   white-space: normal;
   padding-right: 20px;
-  padding-top:150px;
+  padding-top:100px;
 }
 
 .block-list__item-inner {
